[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/hud.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/CreditsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GUI/GameOverMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=6]
[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=7]
[ext_resource path="res://pause_menu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HighScoreLabel" type="RichTextLabel" parent="."]
margin_top = 27.0
margin_right = 480.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]High Score:  99999999[/center]"
text = "High Score:  99999999"
__meta__ = {
"_editor_description_": ""
}

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 67.0
margin_right = 480.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
text = "Score:  0000000"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Control" type="Control" parent="MainMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -190.0
margin_bottom = -160.0
theme = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]Dodge The Creeps
Reloaded[/center]"
text = "Dodge The Creeps
Reloaded"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 287.0
margin_right = -71.0
margin_bottom = -125.0
custom_constants/separation = 50

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 338.0
margin_bottom = 69.0
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Play"
icon_align = 1

[node name="CreditsButton" parent="MainMenu/VBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 119.0
margin_right = 338.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_align = 1

[node name="QuitToDesktopButton" parent="MainMenu/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 238.0
margin_right = 338.0
margin_bottom = 308.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../PlayButton")
size_flags_horizontal = 3
size_flags_vertical = 3
icon_align = 1

[node name="VersionLabel" type="Label" parent="MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0
margin_bottom = -24.0
theme = ExtResource( 7 )
text = "Version 1.0"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverMenu" parent="." instance=ExtResource( 5 )]
visible = false
theme = ExtResource( 7 )

[node name="MessagePanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -84.0
margin_right = 169.0
margin_bottom = -20.0
mouse_filter = 2
size_flags_vertical = 4
__meta__ = {
"_editor_description_": ""
}

[node name="MessageLabel" type="Label" parent="MessagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Message Label"
align = 1
valign = 1
autowrap = true

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="PauseMenu"]
self_modulate = Color( 0.509804, 0.509804, 0.509804, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -121.0
margin_right = 169.0
margin_bottom = 121.0
mouse_filter = 2
size_flags_vertical = 4
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PauseMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -179.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -162.0
margin_right = -39.0
margin_bottom = -24.0
custom_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/HBoxContainer"]
margin_right = 260.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="QuitToMainMenuButton" type="Button" parent="PauseMenu/Panel/HBoxContainer"]
margin_top = 79.0
margin_right = 260.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit to main menu"

[node name="IconButton" type="Button" parent="PauseMenu"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/IconButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 15

[node name="Panel" type="Panel" parent="PauseMenu/IconButton/HBoxContainer"]
margin_right = 21.0
margin_bottom = 53.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="PauseMenu/IconButton/HBoxContainer"]
margin_left = 36.0
margin_right = 57.0
margin_bottom = 53.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="PauseMenu/Panel/HBoxContainer/ResumeButton" to="PauseMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/HBoxContainer/QuitToMainMenuButton" to="PauseMenu" method="_on_QuitToMainMenuButton_pressed"]
[connection signal="pressed" from="PauseMenu/IconButton" to="PauseMenu" method="_on_IconButton_pressed"]
